js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/lib1/JsModuleB.0.kt
@file:JsModule("js-module-b")
